First chapter completed: All teacher functionalities are done. Full description into README.md